# alds

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  basic.c  basic.h  main.c  simple.c  simple.h
lib/: CMakeLists.txt
lib/include/: alds.h  alds_data.h  alds_error.h  alds_log.h  alds_memgmnt.h  alds_memmgmt.h  alds_memory.h
lib/include/alds/: alds.h  alds_error.h  alds_helpers.h  alds_log.h
lib/include/alds/basic/: linked_list.h  queue.h  stack.h
lib/include/alds/data/: alds_alloc.h  alds_data.h  alds_memmngr.h
lib/include/simple/: queue.h  stack.h
lib/src/: alds.c  alds_log.c  alds_memgmnt.c  alds_memory.c
lib/src/basic/: linked_list.c  queue.c  stack.c
lib/src/data/: alds_alloc.c
lib/src/simple/: queue.c  stack.c
tests/: CMakeLists.txt  cmocka_incl.h  data_tests.c  data_tests.h  log_tests.c  log_tests.h  test.c
tests/basic/: basic_tests.h  linked_list_tests.c  queue_tests.c  stack_tests.c
tests/simple/: queue_tests.c  stack_tests.c
